--- a/client/src/global.css
+++ b/client/src/global.css
@@ -17,13 +17,14 @@ body {
 .home {
   background-color: #fff;
   border-radius: 30px;
+  margin: 7% auto;
 }
 .App-main-all {
   background-color: #fff;
   width: 80%;
   border-radius: 30px;
   padding: 60px 0;
-  margin: 30px auto;
+  margin: 7% auto;
   color: #000;
 }
 
@@ -58,7 +59,7 @@ body {
 .navSmart {
   background-color: #000;
   padding: 5px 20px !important;
-  margin: 50px auto !important;
+  margin: 10px auto !important;
   border-radius: 30px;
 }
 .navmain {
@@ -98,7 +99,7 @@ body {
   background-color: #fff;
   border-radius: 30px;
   padding: 60px 0;
-  margin: 40px auto;
+  margin: 7% auto;
   text-align: center;
   color: #000;
 }
