--- a/client/src/features/admin/components/pages/students.css
+++ b/client/src/features/admin/components/pages/students.css
@@ -1,12 +1,17 @@
 .list {
   display: flex;
-  /* width: 100%; */
   padding-right: 5%;
 }
 .listContainer {
   flex: 6;
 }
-
+.sHeading {
+  text-align: center !important;
+}
+.tableStudent {
+  width: fit-content;
+  text-align: center;
+}
 @media only screen and (max-width: 2560px) {
   .container {
     width: 80vw;
