--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -93,15 +93,10 @@ main {
   border-radius: 30px;
   text-align: center;
   margin: 0px auto !important;
-}
-.topbarProfile {
-  color: var(--primary-text-color);
+  color: #fff;
   display: flex;
-  height: 30px;
-
-  /* text-align: center; */
-  align-items: center;
   justify-content: space-around;
+  align-items: center;
 }
 
 .pendingStudent {
@@ -113,6 +108,19 @@ main {
   padding: 10px 20px;
   border: #2e00c6 1px solid;
   font-size: 20px;
+}
+.addCoursebtn {
+  display: flex;
+  justify-content: end;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+.addCoursebtn Button {
+  width: 20%;
+}
+.actionBtnStudent {
+  justify-content: space-around;
+  display: flex;
 }
 @media only screen and (max-width: 2560px) {
   .sidebar {
