--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -111,7 +111,7 @@ main {
 }
 .addCoursebtn {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 3%;
   margin-bottom: 2%;
 }
