--- a/client/src/global.css
+++ b/client/src/global.css
@@ -13,6 +13,17 @@
   --col2: gray;
   --col3: #cecece;
 }
+.notfound{
+  color: var(--primary-text-color);
+  text-align: center;
+  background-color: #000;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
+}
 
 body {
   background-image: url('../public/assets/bgforlms.jpg');
