--- a/client/src/global.css
+++ b/client/src/global.css
@@ -182,7 +182,7 @@ body {
   background-color: #fff;
   width: 30%;
   border-radius: 30px;
-  height: 70vh;
+  /* height: 70vh; */
   margin: 90px auto;
 }
 
@@ -198,7 +198,7 @@ body {
     /* background-color: var(--col1); */
     color: var(--col3);
     width: 50px;
-    height: 50px;
+    /* height: 50px; */
     padding: 5px;
     margin: 20px;
     border-radius: 50px;
