--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -27,6 +27,14 @@ a {
 .container2 {
   display: flex;
 }
+.noteDash{
+  text-align: center;
+  border: 1px solid black !important;
+  padding: 20px;
+  height: 50vh;
+  width: 80% !important;
+  margin: 0px auto;
+}
 main {
   width: 100%;
   padding: 10px;
