--- a/client/src/features/teacher/common/UserSidebar.css
+++ b/client/src/features/teacher/common/UserSidebar.css
@@ -38,6 +38,18 @@
   cursor: pointer;
   color: white;
 }
+
+.topBar {
+  background-color: #000;
+  padding: 10px 20px !important;
+  border-radius: 30px;
+  text-align: center;
+  margin: 20px auto !important;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 @media (max-width: 800px) {
   .usersidebar span {
     font-size: 12px;
