--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -41,14 +41,14 @@ a {
 }
 .noteDash{
   text-align: center;
-  overflow: scroll;
+  overflow-x: scroll !important;
   border: 1px solid black !important;
-  padding: 20px;
-  margin-top: 35px !important;
+  /* padding: 20px; */
+  /* margin-top: 35px !important; */
   height: 80vh;
   width: 100% !important;
   border-radius: 20px;
-  margin: 0px auto;
+  margin: 0px auto !important;
 }
 .contentNoteDash{
 background-color: #00000021 !important;  
@@ -65,9 +65,11 @@ font-size: 35px;
   text-transform: uppercase;
   font-weight: 700;       
   margin: 10px 0;
+  color: #fff;
 }
 .contentNoteDash .noteContent{
   font-size: medium;
+  color: #fff;
 }
 .btnForViewNote{
   display: block ;
