--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -182,6 +182,10 @@ main {
   display: flex;
   justify-content: space-evenly
 }
+.loading{
+  display: flex;
+  justify-content: center;
+}
 @media only screen and (max-width: 2560px) {
   .sidebar {
     width: 2.5% !important;
