--- a/client/src/features/admin/mainadmin.css
+++ b/client/src/features/admin/mainadmin.css
@@ -84,10 +84,10 @@ main {
 .sidebar {
   background: var(--secondary-color);
   color: var(--primary-text-color);
-  height: 95vh;
+  height: 100vh;
   width: 10%;
-  border-radius: 30px;
-  margin: 20px 0px 0px 10px;
+  /* border-radius: 30px; */
+  /* margin: 20px 0px 0px 10px; */
   transition: all 0.5s;
 }
 .sidebar2 {
@@ -146,9 +146,9 @@ main {
 .topBar {
   background-color: #000;
   padding: 5px 20px !important;
-  border-radius: 30px;
+  /* border-radius: 30px; */
   text-align: center;
-  margin: 20px auto !important;
+  /* margin: 20px auto !important; */
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -186,6 +186,12 @@ main {
   display: flex;
   justify-content: center;
 }
+tr{
+  font-size: medium;
+}
+td{
+  font-size: small;
+}
 @media only screen and (max-width: 2560px) {
   .sidebar {
     width: 2.5% !important;
@@ -203,7 +209,7 @@ main {
 }
 @media only screen and (max-width: 1440px) {
   .sidebar {
-    width: 5% !important;
+    width: 4.5% !important;
   }
   .sidebar2 {
     width: 14%;
@@ -217,7 +223,7 @@ main {
 }
 @media only screen and (max-width: 1024px) {
   .sidebar {
-    width: 7% !important;
+    width: 6% !important;
   }
   .sidebar2 {
     width: 15% !important;
