--- a/client/src/global.css
+++ b/client/src/global.css
@@ -226,6 +226,12 @@ body {
   .mainhead1 {
     font-size: 20px;
   }
+  .navcollap{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+  }
 }
 @media only screen and (max-width: 600px) {
   .App {
