--- a/client/src/global.css
+++ b/client/src/global.css
@@ -3,7 +3,9 @@
   padding: 0%;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  scrollbar-width: none;
+  scrollbar-width: 10px;
+  scrollbar-width: 5px;
+  overflow-x: hidden;
 }
 :root {
   --primary-color: #2e00c6;
