--- a/client/src/global.css
+++ b/client/src/global.css
@@ -3,8 +3,7 @@
   padding: 0%;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  scrollbar-width: 10px;
-  scrollbar-width: 5px;
+  scrollbar-width: none;
   overflow-x: hidden;
 }
 :root {
