--- a/client/src/global.css
+++ b/client/src/global.css
@@ -3,7 +3,7 @@
   padding: 0%;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
   overflow-x: hidden;
 }
 :root {
