--- a/client/src/global.css
+++ b/client/src/global.css
@@ -35,6 +35,36 @@ body {
   border-radius: 30px;
   margin: 6% auto;
 }
+.registration-closed {
+  text-align: center;
+  margin: 15% auto;
+  color: #fff;
+  background-color: #000;
+  padding: 5% 10%;
+border-radius: 80px;
+  width: 80%;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.icon {
+  width: 50px; 
+  height: 50px;
+  padding: 10px;
+  cursor: pointer;
+  color: #ffffff; 
+  transition: all 0.3s ease-in-out;
+}
+
+.icon:hover {
+  color: #1a73e8;
+}
+
 .App-main-all {
   background-color: #fff;
   width: 80%;
@@ -223,7 +253,16 @@ body {
   justify-content: space-between;
 }
 /* media queries */
+@media screen and (max-width: 375px) {
+  .registration-closed{
+    margin: 30% auto;
+  }
+}
+
 @media screen and (max-width: 768px) {
+  .registration-closed{
+    margin: 25% auto;
+  }
   .mainhead1 {
     font-size: 20px;
   }
